<?xml version="1.0"?>
<package>

  <name>mrs_odometry</name>
  <version>1.0.0</version>
  <description>The mrs_odometry package</description>

  <maintainer email="matej.petrlik@fel.cvut.cz">Matej Petrlik</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>mrs_lib</build_depend>
  <build_depend>mrs_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>apriltags2_ros</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>mrs_lib</run_depend>
  <run_depend>mrs_msgs</run_depend>
  <run_depend>mrs_mavros_interface</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>apriltags2_ros</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/plugins.xml" />
  </export>

</package>
