<?xml version="1.0"?>
<package format="2">

  <name>mrs_uav_odometry</name>
  <version>1.0.1</version>
  <description>The mrs_uav_odometry package</description>

  <author email="matej.petrlik@fel.cvut.cz">Matej Petrlik</author>
  <maintainer email="matej.petrlik@fel.cvut.cz">Matej Petrlik</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>cmake_modules</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>nodelet</depend>
  <depend>dynamic_reconfigure</depend>

  <export>
    <nodelet plugin="${prefix}/plugins.xml" />
  </export>

</package>
